log
Wed 20 Mar 2024 04:38:21 PM UTC: 
 tests:  0|5
total_score: 0/70
654dda3
Wed 20 Mar 2024 04:44:24 PM UTC: 
 exercises.c | 9 +++++++++
 1 file changed, 9 insertions(+)
 tests:  1|4
total_score: 10/70
b88877c
Wed 20 Mar 2024 04:47:03 PM UTC: 
 exercises.c | 12 +++++++++++-
 1 file changed, 11 insertions(+), 1 deletion(-)
 tests:  2|3
total_score: 20/70
85c860b
Wed 20 Mar 2024 04:50:18 PM UTC: 
 exercises.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
 tests:  2|3
total_score: 20/70
ace4a17
Wed 20 Mar 2024 04:51:09 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|2
total_score: 40/70
d6e2ccf
Wed 20 Mar 2024 04:52:25 PM UTC: 
 exercises.c | 12 ++++++------
 1 file changed, 6 insertions(+), 6 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:71:5: error: ‘dato’ undeclared (first use in this function); did you mean ‘data’?
   71 |     dato = (int*)next(L);
      |     ^~~~
      |     data
exercises.c:71:5: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
1091138
Wed 20 Mar 2024 04:52:34 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|2
total_score: 40/70
847bdf7
Wed 20 Mar 2024 04:56:08 PM UTC: 
 exercises.c | 5 +++++
 1 file changed, 5 insertions(+)
In file included from test.c:5:
exercises.c: In function ‘copia_pila’:
exercises.c:111:8: error: unused variable ‘item’ [-Werror=unused-variable]
  111 |   int *item = top(P1);
      |        ^~~~
exercises.c:109:10: error: unused variable ‘aux’ [-Werror=unused-variable]
  109 |   Stack* aux = create_stack();
      |          ^~~
cc1: all warnings being treated as errors
Compilation failed
fe8d212
